--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.jzap.setlist.setlistui"
         minSdkVersion 23
         targetSdkVersion 24
-        versionCode 10000
-        versionName "1.0"
+        versionCode 10002
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -49,4 +49,6 @@ dependencies {
     }
     compile 'com.github.bumptech.glide:glide:4.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
+    compile 'com.google.android.gms:play-services-auth:10.2.1'
+    compile 'pub.devrel:easypermissions:0.1.0' /*  was 0.3.0 */
 }
